--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,5 +6,6 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "dearpygui>=2.0.0",
+    "numpy>=2.2.4",
     "opencv-python>=4.11.0.86",
 ]
